# Face_similarity_V2

./: Dockerfile  README.md  pyproject.toml  requirements.txt
app/: face_comparison.py  main.py  utils.py
